# arkdata

./: .firebaserc  .gitignore  firebase.json  package.json  pnpm-lock.yaml  turbo.json
apps/pixel-automation/: package.json
apps/web/: .env.example  index.html  package.json
apps/web/functions/: advancedWorkflowProcessor.ts  aiInsights.ts  analyticsEndpoints.ts  axiosInterceptor.ts  backendVerification.ts  billingSetup.ts  coreBackend.ts  dataHygieneBackfill.ts  dataHygieneCleanup.ts  dataHygieneTests.ts  errorBoundary.ts  healthChecks.ts  initializationGuards.ts  initializeOnboarding.ts  integrationTests.ts  (+11 more)
docs/: architecture.md  competitor-analysis-mvp.md  decisions.md  discovery.md  plan.md  progress.md  research.md
docs/legacy_reference/: nginx_template.conf  pixel_generation_flow.md
infra/firestore-rules/: firestore.rules
infra/functions/: package-lock.json  package.json  tsconfig.json
infra/storage-rules/: storage.rules
infra/terraform/: cloudrun.tf  cloudsql.tf  firestore.tf  main.tf  outputs.tf  pubsub.tf  storage.tf  variables.tf
scripts/: .env.example  backfill-partner-teams.js  intentcore_create_pixel.py  intentcore_delete_pixels.py  intentcore_login.py  migrate-platform-admin.js
services/analytics-api/: package.json
services/analytics-sync/: package.json
services/identity-resolution/: Dockerfile  package.json
services/pixel-creator/: .env.example  .gitignore  Dockerfile  pyproject.toml
services/pixel-creator/src/: config.py  main.py  models.py  pixel_creator.py  session_pool.py
services/pixel-ingest/: Dockerfile  package.json
(+149 files in other folders)
