[project]
name = "pixel-creator"
version = "0.1.0"
description = "FastAPI service to create IntentCore pixels via Selenium"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["httpx", "pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
